--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 # AZURE_AI_PROJECT_ENDPOINT: Your Azure AI project endpoint
 # AZURE_AI_MODEL_DEPLOYMENT_NAME: The name of your model deployment
-
 AZURE_AI_PROJECT_ENDPOINT=https://your-azure-ai-endpoint.com
 AZURE_AI_MODEL_DEPLOYMENT_NAME=your-model-deployment-name
+
+# AZURE_OPENAI_ENDPOINT: The endpoint for Azure OpenAI
+# AZURE_OPENAI_CHAT_DEPLOYMENT_NAME: The name of your Azure OpenAI chat deployment
+AZURE_OPENAI_ENDPOINT=https://your-azure-openai-endpoint.com/
+AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=your-chat-deployment-name
